dist_man1_MANS=

if BUILD_OGGNALIVED
  dist_man1_MANS+=oggnalived.1
endif

if ENABLE_QT
  dist_man1_MANS+=oggnalive-qt.1
endif

if BUILD_OGGNALIVE_CLI
  dist_man1_MANS+=oggnalive-cli.1
endif

if BUILD_OGGNALIVE_TX
  dist_man1_MANS+=oggnalive-tx.1
endif

if BUILD_OGGNALIVE_UTIL
  dist_man1_MANS+=oggnalive-util.1
endif

if ENABLE_WALLET
if BUILD_OGGNALIVE_WALLET
  dist_man1_MANS+=oggnalive-wallet.1
endif
endif
